--- a/curations/go/golang/github.com/tilinna/clock.yaml
+++ b/curations/go/golang/github.com/tilinna/clock.yaml
@@ -7,3 +7,12 @@ revisions:
   v1.1.0:
     licensed:
       declared: MIT
+  v1.0.2:
+    licensed:
+      declared: MIT
+  v1.0.1:
+    licensed:
+      declared: MIT
+  v1.0.0:
+    licensed:
+      declared: MIT
